Added about, experience, skills, education

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,8 +1,17 @@
 .navbar-wrapper {
-  width: 80vw;
-  margin-top: 10vh;
+  width: 100%;
+  margin-top: 2vh;
+  padding-left: 30vh;
+  padding-top: 3vh;
+  padding-right: 30vh;
+  padding-bottom: 1vh;
+  font-size: 23px;
   display: flex;
+  z-index:1;
+  background-color: black;
+  color: white;
   align-items: center;
+  position: fixed;
   justify-content: space-between;
   .name {
     font-weight: 600;
@@ -10,12 +19,12 @@
   .links-wrapper {
     button {
       text-decoration: none;
-      padding: 10px;
       font-family: "Open Sans";
       opacity: 0.6;
       transition: all 0.2s ease-in-out;
-      font-size: 22px;
-      background-color: transparent;
+      font-size: 16px;
+      background-color: black;
+      color:white;
       outline: none;
       border: 0px;
       cursor: pointer;
@@ -25,6 +34,7 @@
     }
     .active {
       color: black;
+      border: 2px;
     }
   }
 }
