--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -10,24 +10,29 @@
   background-position: center;
 
   .content {
-    font-family: "Open Sans";
     text-align: center;
     padding: 10px;
     opacity: 0;
+    position: relative;
+    right: -100;
+    font-family: 'Arial';
     transition: all 500ms ease-in-out;
     transform: translate(0, 20px);
     cursor: pointer;
     h1 {
+      font-family: 'Arial';
       font-size: 14px;
       color: white;
     }
     p {
+      font-family: 'Arial';
       font-size: 10px;
-      color: white;
+      color: rgb(5, 4, 4);
       margin-bottom: 20px;
     }
 
     .btn {
+      font-family: 'Arial';
       background-color: black;
       color: white;
       padding: 10px;
