--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import "./include-media.scss";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
 // Atoms
 @import "./card.scss";
@@ -15,7 +16,7 @@
 @import "./footer.scss";
 
 * {
-  font-family: "Montserrat";
+  font-family: 'Gloria Hallelujah', cursive;
 }
 
 body {
@@ -29,6 +30,7 @@ body {
   width: 100vw;
   height: auto;
   overflow: hidden;
+  font-family: 'Arial';
 }
 
 .container {
@@ -52,4 +54,17 @@ body {
   &:hover {
     transform: scale(1.1);
   }
+}
+
+#particle-js {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -10;
+  top: 0;
+  left: 0
+}
+
+#home {
+  overflow: hidden;
 }
