--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -12,6 +12,7 @@
     display: grid;
     margin-top: 20px;
     grid-template-columns: repeat(3, 1fr);
+    font-family: 'Arial';
     grid-gap: 10px;
     @include media(">=phone", "<lgphone") {
       grid-template-columns: 1fr;
