--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -14,6 +14,7 @@
     padding: 10px;
     opacity: 0;
     position: relative;
+    z-index: -1;
     right: -100;
     font-family: 'Arial';
     transition: all 500ms ease-in-out;
