--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -22,6 +22,7 @@
 body {
   margin: 0;
   padding: 0;
+  display: block;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -58,7 +59,6 @@ body {
 
 #particles-js canvas {
   display: block;
-  vertical-align: bottom;
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
